[package]
name = "ws_client_rust"
version = "0.1.0"
authors = ["Dmitry Shatilov <shatilov.diman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
simple_logger = "^1.6"
websocket = "^0.24"
crossbeam-channel = "^0.4"

